Rebranded to Bitbar Run-in-Cloud and fixed some typos

--- a/src/main/resources/com/testdroid/jenkins/RunInCloudBuilder/help-projectId.html
+++ b/src/main/resources/com/testdroid/jenkins/RunInCloudBuilder/help-projectId.html
@@ -1,3 +1,3 @@
 <div>
-    <p>Choose project from Testdroid Cloud where your tests will be running.</p>
+    <p>The Bitbar Cloud project in which to start the new test run.</p>
 </div>
