--- a/src/main/resources/com/testdroid/jenkins/RunInCloudBuilder/help-testRunStateCheckMethod.html
+++ b/src/main/resources/com/testdroid/jenkins/RunInCloudBuilder/help-testRunStateCheckMethod.html
@@ -1,3 +1,3 @@
 <div>
-    <p>Choose method for checking if test run state is finished</p>
+    <p>Method for checking if test run state is finished. HOOK_URL means that the cloud should send a request to this Jenkins instance when it's ready. API_CALL means that this build step will poll the backend continuously to check its status.</p>
 </div>
