--- a/src/main/resources/com/testdroid/jenkins/TestdroidCloudSettings/help-useCustomEmailNotificationField.html
+++ b/src/main/resources/com/testdroid/jenkins/TestdroidCloudSettings/help-useCustomEmailNotificationField.html
@@ -1,3 +1,3 @@
-<div><p>Check this to specify email or list of emails for notification as well as type of notification.
-    If unchecked the default settings from Testdroid Cloud will be used.
-    Currently Testdroid Cloud sends email always when test finished to email equals to user's login</p></div>
+<div><p>Check this to specify one or more email addresses for notifications as well as the type of notification they'll receive.
+    If unchecked the default settings from Bitbar Cloud will be used.
+    By default, Bitbar Cloud sends an email to each user's respective login email when their test runs finish.</p></div>
