--- a/src/main/resources/com/testdroid/jenkins/RunInCloudBuilder/help-downloadScreenshotsField.html
+++ b/src/main/resources/com/testdroid/jenkins/RunInCloudBuilder/help-downloadScreenshotsField.html
@@ -1,3 +1,3 @@
 <div>
-    <p>If checked then screenshots will be also downloaded in separate folder called 'screenshots'</p>
+    <p>If checked, screenshots will also be downloaded (along with log files) into a separate folder called 'screenshots'</p>
 </div>
