--- a/src/main/resources/com/testdroid/jenkins/RunInCloudBuilder/help-forceFinishAfterWaitField.html
+++ b/src/main/resources/com/testdroid/jenkins/RunInCloudBuilder/help-forceFinishAfterWaitField.html
@@ -1,4 +1,3 @@
 <div>
-    <p>If field 'Timeout for results' is set and it will be exceeded this job will force to finish test in Testdroid
-        Cloud. It will be also forced to finish if you interrupt it manually.</p>
+    <p>If the field 'Timeout for results' is set, checking this options forces the Bitbar Cloud run to finish if the run time exceeds the timeout.</p>
 </div>
