--- a/src/main/resources/com/testdroid/jenkins/RunInCloudBuilder/help-hookUrlField.html
+++ b/src/main/resources/com/testdroid/jenkins/RunInCloudBuilder/help-hookUrlField.html
@@ -1,4 +1,4 @@
 <div>
-    <p>Address at which Testdroid Cloud will send post about test finished. <br/>
-        If empty then by default will be {jenkinsURL}/plugin/testdroid-run-in-cloud/api/json/cloud-webhook</p>
+    <p>URL to which Bitbar Cloud will send a POST request when the test run finishes. <br/>
+       Default value: {jenkinsURL}/plugin/testdroid-run-in-cloud/api/json/cloud-webhook</p>
 </div>
