--- a/src/main/resources/com/testdroid/jenkins/RunInCloudBuilder/help-instrumentation.html
+++ b/src/main/resources/com/testdroid/jenkins/RunInCloudBuilder/help-instrumentation.html
@@ -1,3 +1,3 @@
 <div>
-    <p>Instrumentation file path, e.g. ApiDemosTest.apk. It should be relative to workspace.</p>
+    <p>Instrumentation file path, e.g. ApiDemosTest.apk. Can be relative or absolute.</p>
 </div>
