--- a/src/main/resources/com/testdroid/jenkins/TestdroidCloudSettings/help-authorize.html
+++ b/src/main/resources/com/testdroid/jenkins/TestdroidCloudSettings/help-authorize.html
@@ -1,3 +1,3 @@
 <div>
-    <p>Please provide you email and password and then click authorize button. All data will be saved.</p>
+    <p>Please provide your email and password and then click the authorize button. All data will be saved.</p>
 </div>
