--- a/src/main/resources/com/testdroid/jenkins/TestdroidCloudSettings/help-notificationEmailField.html
+++ b/src/main/resources/com/testdroid/jenkins/TestdroidCloudSettings/help-notificationEmailField.html
@@ -1,4 +1,4 @@
 <div>
-    <p>You can provide more than one email separated with comma.
-        E-mails might be in simple form like foo@bar.com or "Foo &lt;foo@bar.com&gt;"</p>
+    <p>You can provide more than one (comma-separated) email.
+        Email addresses can be written in simple form "foo@bar.com" or extended form "Foo &lt;foo@bar.com&gt;"</p>
 </div>
