--- a/src/main/resources/com/testdroid/jenkins/TestdroidCloudSettings/help-privateInstanceState.html
+++ b/src/main/resources/com/testdroid/jenkins/TestdroidCloudSettings/help-privateInstanceState.html
@@ -1,3 +1,3 @@
 <div>
-    <p>Select to define addresses to your own Testdroid Server. Remember to click "Authorize" at the end.</p>
+    <p>Select to define your own Bitbar Cloud URL. Remember to click "Authorize" at the end.</p>
 </div>
