--- a/src/main/resources/com/testdroid/jenkins/TestdroidCloudSettings/help-credentialsId.html
+++ b/src/main/resources/com/testdroid/jenkins/TestdroidCloudSettings/help-credentialsId.html
@@ -1,3 +1,3 @@
 <div>
-    <p>Create BitBar API key in Jenkins credentials plugin to be able to choose it</p>
+    <p>Create BitBar API key in Jenkins credentials plugin</p>
 </div>
